Introduced analytical test suite for matrix

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,5 +26,5 @@ macro(PACKAGE_ADD_TEST TEST_NAME)
 endmacro()
 
 PACKAGE_ADD_TEST(algebra_Matrix_SanityTests algebra_Matrix_SanityTests.cpp)
-
+PACKAGE_ADD_TEST(algebra_Matrix_AnalyticalTests algebra_Matrix_AnalyticalTests.cpp)
 
