Added tests for determining diagonal elements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ if(${CMAKE_VERSION} VERSION_LESS 3.12)
   cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
 endif()
 project(Francois VERSION 1.0 DESCRIPTION "Library for linear algebra" LANGUAGES CXX)
+include(CTest)
 
 set(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/Dummy.cpp)
 
@@ -13,7 +14,7 @@ target_compile_features(Francois PUBLIC cxx_std_14)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/googletest)
 
-option(PACKAGE_TEST "Build for tets" ON)
+option(PACKAGE_TEST "Build for tests" ON)
 if(PACKAGE_TEST)
   enable_testing()
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
