--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,9 @@
     "ostream": "cpp",
     "utility": "cpp",
     "iosfwd": "cpp",
-    "memory": "cpp"
+    "memory": "cpp",
+    "iomanip": "cpp",
+    "iostream": "cpp"
   },
   "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
   "C_Cpp.configurationWarnings": "Disabled"
