Cleaned up and grouped the test suite

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,12 +18,14 @@ macro(PACKAGE_ADD_TEST TEST_NAME)
   set_target_properties(${TEST_NAME} PROPERTIES FOLDER tests)
 endmacro()
 
-PACKAGE_ADD_TEST(algebra_Matrix_SanityTests algebra_Matrix_SanityTests.cpp)
-PACKAGE_ADD_TEST(algebra_Matrix_AnalyticalTests algebra_Matrix_AnalyticalTests.cpp)
-PACKAGE_ADD_TEST(algebra_Matrix_OperationsTests algebra_Matrix_OperationsTests.cpp)
-PACKAGE_ADD_TEST(algebra_Matrix_UtilityTests algebra_Matrix_UtilityTests.cpp)
+#Matrix test suite
+PACKAGE_ADD_TEST(algebra_Matrix_SanityTests _matrix/algebra_Matrix_SanityTests.cpp)
+PACKAGE_ADD_TEST(algebra_Matrix_AnalyticalTests _matrix/algebra_Matrix_AnalyticalTests.cpp)
+PACKAGE_ADD_TEST(algebra_Matrix_OperationsTests _matrix/algebra_Matrix_OperationsTests.cpp)
+PACKAGE_ADD_TEST(algebra_Matrix_UtilityTests _matrix/algebra_Matrix_UtilityTests.cpp)
 
-PACKAGE_ADD_TEST(algebra_Determinant_SanityTests algebra_Determinant_SanityTests.cpp)
-PACKAGE_ADD_TEST(algebra_Determinant_AnalyticalTests algebra_Determinant_AnalyticalTests.cpp)
-PACKAGE_ADD_TEST(algebra_Determinant_OperationsTests algebra_Determinant_OperationsTests.cpp)
-PACKAGE_ADD_TEST(algebra_Determinant_UtilityTests algebra_Determinant_UtilityTests.cpp)
+#Determinant test suite
+PACKAGE_ADD_TEST(algebra_Determinant_SanityTests _determinant/algebra_Determinant_SanityTests.cpp)
+PACKAGE_ADD_TEST(algebra_Determinant_AnalyticalTests _determinant/algebra_Determinant_AnalyticalTests.cpp)
+PACKAGE_ADD_TEST(algebra_Determinant_OperationsTests _determinant/algebra_Determinant_OperationsTests.cpp)
+PACKAGE_ADD_TEST(algebra_Determinant_UtilityTests _determinant/algebra_Determinant_UtilityTests.cpp)
