--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,13 @@
     "string": "cpp",
     "string_view": "cpp",
     "system_error": "cpp",
-    "tuple": "cpp"
+    "tuple": "cpp",
+    "__hash_table": "cpp",
+    "deque": "cpp",
+    "forward_list": "cpp",
+    "fstream": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp"
   },
   "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
   "C_Cpp.configurationWarnings": "Disabled"
